Bootsrap update and small changes

--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Details.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Details.cshtml
@@ -43,5 +43,6 @@
 <!-- Modal -->
 @Html.Partial("_Modal", Model)
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryval")  
+    @Scripts.Render("~/Scripts/main.js")
 }
