--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Layout.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Layout.cshtml
@@ -41,3 +41,6 @@
 
 </body>
 </html>
+@Scripts.Render("~/bundles/jquery")
+@*@Scripts.Render("~/bundles/bootstrap")*@
+@RenderSection("scripts", required: false)
