--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Edit.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Edit.cshtml
@@ -1,20 +1,22 @@
 ﻿@model BusinessObjectModel.Role
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(model => model.RoleId)
+    
     <div class="form-horizontal">
-        <h4>Roles</h4>
+        <h4>Role</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.RoleId)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -25,7 +27,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" @ViewBag.disabled />
             </div>
         </div>
     </div>
