--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Students/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Students/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<dynamic>
+﻿@model IEnumerable<BusinessObjectModel.User>
 
 @{
-    ViewBag.Title = "College Students";
+    ViewBag.Title = "Students";
 }
 
 <h2>College Students</h2>
