--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Create.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateStudent", "Roles", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.RoleId)
