--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Index.cshtml
@@ -27,7 +27,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ID)
+            @Html.DisplayNameFor(model => model.UserId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -58,7 +58,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ID)
+                @Html.DisplayFor(modelItem => item.UserId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -82,8 +82,8 @@
                 @Html.DisplayFor(modelItem => item.Generation_of_Student)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-primary btn-sm" })
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }, new { @class = "btn btn-primary btn-sm" })
+                @Html.ActionLink("Details", "Details", new { id = item.UserId }, new { @class = "btn btn-primary btn-sm" })
+                @Html.ActionLink("Edit", "Edit", new { id = item.UserId }, new { @class = "btn btn-primary btn-sm" })
                 <button type="button" class="btn btn-primary btn-sm" id="modal" data-toggle="modal" data-target="#exampleModal">
                     Delete
                 </button>
