--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Register/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Register/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusinessObjectModel.User
+﻿@model BusinessObjectModel.Users
 
 @{
     ViewBag.Title = "Register";
@@ -49,13 +49,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
      
+        <div class="form-group">
 
+        </div>
      
 
         <div class="form-group">
