--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Index.cshtml
@@ -5,17 +5,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Roles</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "Roles", new { @class = "btn btn-dark btn-sm" })
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th></th>
+        <th>
+            Options
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -24,9 +26,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.RoleId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.RoleId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.RoleId })
+            @Html.ActionLink("Edit", "Edit", new { id=item.RoleId }, new { @class = "btn btn-primary btn-sm" }) 
+            @Html.ActionLink("Details", "Details", new { id=item.RoleId }, new { @class = "btn btn-info btn-sm" }) 
+            @Html.ActionLink("Delete", "Delete", new { id=item.RoleId }, new { @class = "btn btn-danger btn-sm" })
         </td>
     </tr>
 }
