--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Layout.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @*@if (User.Identity.IsAuthenticated)
+    {*@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -17,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Mvc App Hello World", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Hello World", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,14 +27,20 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("High School Students List", "Index", "HighSchoolStudents")</li>
-                    <li>@Html.ActionLink("College Students List", "Index", "CollegeStudents")</li>
+                    <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
+                    <li>@Html.ActionLink("User", "Index", "User")</li>
+
+                    <li>@Html.ActionLink("High School Students", "Index", "HighSchoolStudents")</li>
+                    <li>@Html.ActionLink("College Students", "Index", "CollegeStudents")</li>
+                    <li>@Html.ActionLink("Professors", "Index", "Professor")</li>
                     <li>@Html.ActionLink("Login", "Index", "Login")</li>
                     <li>@Html.ActionLink("Register", "Index", "Register")</li>
                 </ul>
             </div>
         </div>
     </div>
+
+
     <div class="container body-content">
         @RenderBody()
         <hr />
