--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Modal.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Modal.cshtml
@@ -3,13 +3,13 @@
 
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Student</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete User</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Are you sure that you want to delete student?
+                Are you sure that you want to delete this user?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
