--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Professor/Details.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Professor/Details.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Details</h2>
 
-@using (Html.BeginForm("EditDetails", "CollegeStudents", FormMethod.Post))
+@using (Html.BeginForm("EditDetails", "Professor", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
