--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Modal.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Modal.cshtml
@@ -13,7 +13,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <a href='@Url.Action("Delete", "College")' class="btn btn-primary">Delete</a>
+                @*@Html.ActionLink("Delete", "Delete",  new { @class = "btn btn-primary btn-sm" })*@
             </div>
         </div>
     </div>
