--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Create.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Create.cshtml
@@ -5,43 +5,48 @@
 
 }
 
-<h2>Create New High School Student</h2>
-
-
-@using (Html.BeginForm("CreateStudent", "HighSchoolStudents", FormMethod.Post)) 
+@if (User.IsInRole("Professor"))
 {
-    @Html.AntiForgeryToken()
-<div class="form-horizontal">
-    <h4>HighSchoolStudents</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    if (User.IsInRole("Professor"))
+    {
 
-    @Html.Partial("_Create", Model)
-    <div class="form-group">
-        @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.School_Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Enrollment_date, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Enrollment_date, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Enrollment_date, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-</div>
-}
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+        <h2>Create New High School Student</h2>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+        using (Html.BeginForm("Save", "HighSchoolStudents", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <div class="form-horizontal">
+                <h4>HighSchoolStudents</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                @Html.Partial("_Create", Model)
+                <div class="form-group">
+                    @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.School_Name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Enrollment_date, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Enrollment_date, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Enrollment_date, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
+                </div>
+            </div>
+        }
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+    }
 }
