--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Details.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Details.cshtml
@@ -4,45 +4,50 @@
     ViewBag.Title = "Details";
 }
 <h2>Edit College Students</h2>
-@using (Html.BeginForm("EditDetails", "CollegeStudents", FormMethod.Post))
+
+
+@if (User.IsInRole("Professor"))
 {
-    @Html.AntiForgeryToken()
-    <div class="form-horizontal">
-        <br />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.UserId)
-        @Html.Partial("_Edit", Model)
-        <div class="form-group">
-            @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.School_Name, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
-           : (object)new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
+    using (Html.BeginForm("EditDetails", "HighSchoolStudents", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-horizontal">
+            <br />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.UserId)
+            @Html.Partial("_Edit", Model)
+            <div class="form-group">
+                @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.School_Name, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
+        : (object)new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Enrollment_date, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Enrollment_date, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
+        : (object)new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Enrollment_date, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" @ViewBag.disabled />
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Enrollment_date, htmlAttributes: new { @class = "control-label col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.Enrollment_date, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
-           : (object)new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Enrollment_date, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" @ViewBag.disabled />
-            </div>
-        </div>
+    }
+    <div>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.UserId }, new { @class = "btn btn-primary btn-sm" })
+        @Html.ActionLink("Back to List", "Index", new { @class = "btn btn-primary btn-sm" })
+        @Html.ActionLink("Download Details", "Export", new { id = Model.UserId }, new { @class = "btn btn-primary btn-sm" })
+        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">Delete</button>
     </div>
-}
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.UserId }, new { @class = "btn btn-primary btn-sm" })
-    @Html.ActionLink("Back to List", "Index", new { @class = "btn btn-primary btn-sm" })
-    @Html.ActionLink("Download Details", "Export", new { id = Model.UserId }, new { @class = "btn btn-primary btn-sm" })
-    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">Delete</button>
-</div>
-<!-- Modal -->
-@Html.Partial("_Modal", Model)
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <!-- Modal -->
+    @Html.Partial("_Modal", Model)
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
