--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Edit.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Roles/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditDetails", "ROles", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
