--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Create.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Create.cshtml
@@ -2,7 +2,6 @@
 
 
 
-@Html.HiddenFor(model => model.ID)
 
 
 <div class="form-group">
@@ -48,5 +47,11 @@
     <div class="col-md-10">
         @Html.EditorFor(model => model.Phone_Number, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.Phone_Number, "", new { @class = "text-danger" })
+    </div>
+</div><div class="form-group">
+    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
     </div>
 </div>
