--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Create.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Create.cshtml
@@ -1,8 +1,4 @@
-﻿@model BusinessObjectModel.Users
-
-
-
-
+﻿@model UsersViewModel
 
 <div class="form-group">
     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
