--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Details.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusinessObjectModel.College
+﻿@model CollegeViewModel
 @{
     ViewBag.Title = "College Student Details";
 }
@@ -17,20 +17,20 @@
         <div class="form-group">
             @Html.LabelFor(model => model.College_Name, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
-                @Html.EditorFor(model => model.College_Name, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.College_Name, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.College_Name, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Generation_of_Student, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
-                @Html.EditorFor(model => model.Generation_of_Student, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Generation_of_Student, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Generation_of_Student, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" @ViewBag.disabled />
+                <input type="submit" value="Save" class="btn btn-default" @Model.Disabled />
             </div>
         </div>
     </div>
