--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Details.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Details.cshtml
@@ -1,9 +1,8 @@
-﻿@model BusinessObjectModel.HighSchool
+﻿@model HighSchoolViewModel
 
 @{
-    ViewBag.Title = "Details";
 }
-<h2>Edit College Students</h2>
+<h2>@Model.Title</h2>
 
 
 @if (User.IsInRole("Professor"))
@@ -17,31 +16,31 @@
             @Html.HiddenFor(model => model.UserId)
             @Html.Partial("_Edit", Model)
             <div class="form-group">
-                @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.School_Name, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
+                    @Html.EditorFor(model => model.Name, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
         : (object)new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Enrollment_date, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.Enrollment_date, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
+                    @Html.EditorFor(model => model.Enrollment_date, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } }
         : (object)new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Enrollment_date, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" @ViewBag.disabled />
+                    <input type="submit" value="Save" class="btn btn-default" @Model.Disabled />
                 </div>
             </div>
         </div>
     }
     <div>
         @Html.ActionLink("Edit", "Edit", new { id = Model.UserId }, new { @class = "btn btn-primary btn-sm" })
-        @Html.ActionLink("Back to List", "Index", new { @class = "btn btn-primary btn-sm" })
+        @Html.ActionLink("Back to List", "Index", "HighSchoolStudents", new { @class = "btn btn-primary btn-sm" })
         @Html.ActionLink("Download Details", "Export", new { id = Model.UserId }, new { @class = "btn btn-primary btn-sm" })
         <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">Delete</button>
     </div>
