--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Index.cshtml
@@ -1,94 +1,90 @@
-﻿@model IEnumerable<BusinessObjectModel.HighSchool>
+﻿@model IEnumerable<HighSchoolViewModel>
 
 @{
     ViewBag.Title = "List of High School Students";
 }
 <h2>High School Students</h2>
-<p>
+
     @if (User.IsInRole("Professor"))
     {
-        @Html.ActionLink("Create New High School Student", "Create")
+        @Html.ActionLink("Create new", "Create", "HighSchoolStudents", new { @class = "btn btn-success btn-sm" })
     }
+        <div class="col-md-3">
+            @using (Html.BeginForm("Search", "HighSchoolStudents", FormMethod.Get))
+            {
+                <p>
+                    @Html.TextBox("SearchString")
+                    <input type="submit" value="Search" class="btn btn-primary btn-sm">
+                </p>
+            }
+        </div>
+    <table class="table">
+        <tr>
 
-        @using (Html.BeginForm("Search", "HighSchool", FormMethod.Get))
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Lastname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Birthday_date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Phone_Number)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.House_Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.School_Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Enrollment_date)
+            </th>
+        </tr>
+        @foreach (var item in Model)
         {
-    <div class="col-md-3">
-        @using (Html.BeginForm("Search", "HighSchoolStudents", FormMethod.Get))
-        {
-            <p>
-                @Html.TextBox("SearchString")
-                <input type="submit" value="Search" class="btn btn-primary btn-sm">
-            </p>
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Lastname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Birthday_date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Phone_Number)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.House_Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.School_Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Enrollment_date)
+                </td>
+
+                @if (User.IsInRole("Professor"))
+                {
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id = item.UserId }, new { @class = "btn btn-info btn-sm" })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.UserId }, new { @class = "btn btn-primary btn-sm" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.UserId }, new { @class = "btn btn-danger btn-sm" })
+
+                    </td>
+                }
+            </tr>
+            @Html.Partial("_Modal", Model)
         }
-    </div>
-}
-<table class="table">
-    <tr>
-       
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Lastname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Birthday_date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone_Number)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.House_Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.School_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Enrollment_date)
-        </th>
-    </tr>
-    @foreach (var item in Model)
-    {
-<tr>
-
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Lastname)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Birthday_date)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Email)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Phone_Number)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.House_Address)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.School_Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Enrollment_date)
-    </td>
-
-    @if (User.IsInRole("Professor"))
-    {
-<td>
-    @Html.ActionLink("Details", "Details", new { id = item.UserId }, new { @class = "btn btn-info btn-sm" })
-    @Html.ActionLink("Edit", "Edit", new { id = item.UserId }, new { @class = "btn btn-primary btn-sm" })
-    @Html.ActionLink("Delete", "Delete", new { id = item.UserId }, new { @class = "btn btn-danger btn-sm" })
-
-</td>
-    }
-</tr>
-        @Html.Partial("_Modal", Model)
-    }
-</table>
+    </table>
