--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Edit.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Edit.cshtml
@@ -1,57 +1,57 @@
-﻿@model BusinessObjectModel.Users
+﻿@model UsersViewModel
 
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.Name, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.Name, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.Name, "", new { @class = "text-danger" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Lastname, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.Lastname, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.Lastname, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Lastname, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.Lastname, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.Lastname, "", new { @class = "text-danger" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.House_Address, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.House_Address, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.House_Address, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.House_Address, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.House_Address, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.House_Address, "", new { @class = "text-danger" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Birthday_date, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.Birthday_date, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.Birthday_date, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Birthday_date, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.Birthday_date, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.Birthday_date, "", new { @class = "text-danger" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Phone_Number, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.Phone_Number, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.Phone_Number, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Phone_Number, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.Phone_Number, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.Phone_Number, "", new { @class = "text-danger" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.Email, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.Email, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.Email, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.Email, "", new { @class = "text-danger" })
     </div>
 </div>
 <div class="form-group">
-    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-4" })
+    @Html.LabelFor(model => Model.Password, htmlAttributes: new { @class = "control-label col-md-4" })
     <div class="col-md-8">
-        @Html.EditorFor(model => model.Password, ViewBag.readOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        @Html.EditorFor(model => Model.Password, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } } : (object)new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => Model.Password, "", new { @class = "text-danger" })
     </div>
 </div>
