--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Layout.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Layout.cshtml
@@ -84,4 +84,4 @@
 </html>
 @Scripts.Render("~/bundles/jquery")
 @*@Scripts.Render("~/bundles/bootstrap")*@
-@RenderSection("scripts", required: false)
+@*@RenderSection("scripts", required: false)*@
