--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CollegeViewModel>
+﻿@model IEnumerable<CollegeStudentsQueryViewModel>
 
 @{
     ViewBag.Title = "College Students";
