--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Create.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Create.cshtml
@@ -16,11 +16,11 @@
         {
             @Html.AntiForgeryToken()
             <div class="form-horizontal">
-                <h4>HighSchoolStudents</h4>
+                <h4>HighSchool Student</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
                 @Html.Partial("_Create", Model)
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -28,6 +28,7 @@
                         @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Enrollment_date, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
