--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Details.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/HighSchoolStudents/Details.cshtml
@@ -16,11 +16,11 @@
             @Html.HiddenFor(model => model.UserId)
             @Html.Partial("_Edit", Model)
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.School_Name, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.Name, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" , @required = "required" } }
+                    @Html.EditorFor(model => model.School_Name, Model.ReadOnly == true ? (object)new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" , @required = "required" } }
         : (object)new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.School_Name, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
