--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Professor/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Professor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProfessorViewModel>
+﻿@model IEnumerable<ProfessorQueryViewModel>
 
 @{
     ViewBag.Title = "View";
@@ -32,15 +32,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Lastname)
         </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone_Number)
-        </th>
-
-
         <th>
             @Html.DisplayNameFor(model => model.ClassSubject)
         </th>
@@ -59,16 +50,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Lastname)
             </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-
-
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone_Number)
-            </td>
-
             <td>
                 @Html.DisplayFor(modelItem => item.ClassSubject)
             </td>
@@ -84,7 +65,6 @@
 
                 }
             </td>
-
         </tr>
         @Html.Partial("_Modal", Model)
 
