--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Index.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/CollegeStudents/Index.cshtml
@@ -68,9 +68,9 @@
 <td>
     @Html.ActionLink("Details", "Details", new { id = item.UserId }, new { @class = "btn btn-info btn-sm" })
     @Html.ActionLink("Edit", "Edit", new { id = item.UserId }, new { @class = "btn btn-primary btn-sm" })
-    @Html.ActionLink("Delete", "Delete", new { id = item.UserId }, new { @class = "btn btn-danger btn-sm" })
+    @*@Html.ActionLink("Delete", "Delete", new { id = item.UserId }, new { @class = "btn btn-danger btn-sm" })*@
 
-    @*<button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal">Delete</button>*@
+    <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal-@item.UserId">Delete</button>
 </td>
     }
 </tr>
