--- a/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Modal.cshtml
+++ b/MvcAppHelloWorld/MvcAppHelloWorld/Views/Shared/_Modal.cshtml
@@ -1,20 +1,26 @@
-﻿<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+﻿@model  IEnumerable<UsersQueryViewModel>
 
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete User</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure that you want to delete this user?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                @*@Html.ActionLink("Delete", "Delete",  new { @class = "btn btn-primary btn-sm" })*@
+@foreach (var item in Model)
+{
+    @Html.HiddenFor(modelItem => item.UserId)
+    <div class="modal fade" id="exampleModal-@item.UserId" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure that you want to delete <strong>@Html.DisplayFor(modelItem => item.Name) @Html.DisplayFor(modelItem => item.Lastname)?</strong>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    @Html.ActionLink("Delete", "Delete", new { id = item.UserId },  new { @class = "btn btn-danger btn-sm" })
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
